replace <div> with <main>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="division-one">
+  <main class="division-one">
 
     <img class="hero" src="images/illustration-hero.jpg" alt="hero">
     <h1 class="order-summary">Order Summary</h1>
@@ -25,7 +25,7 @@
     <p><a class="btn" href=""> Proceed to Payment</a></p>
     <p class="co"><a class="Cancel" href="">Cancel Order</a></p>
 
-  </div>
+  </main>
 
 </body>
 
