updated whole index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
 
   <main class="division-one">
@@ -20,7 +19,8 @@
     <h1 class="order-summary">Order Summary</h1>
     <p class="paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
     <img class="music" src="images/icon-music.png" alt="icon-img">
-    <h1 class="annual-plan">Annual Plan <p class="price">$59.99/year</p></h1>
+    <h1 class="annual-plan">Annual Plan </h1>
+    <p class="price">$59.99/year</p>
     <a class="change" href="">change</a>
     <p><a class="btn" href=""> Proceed to Payment</a></p>
     <p class="co"><a class="Cancel" href="">Cancel Order</a></p>
